--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
   <title>@volodalexey - portfolio</title>
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
     .loader {
       fill: currentColor;
       position: fixed;
@@ -24,6 +29,35 @@
       width: 50px;
       height: 50px;
     }
+
+    .loader>svg .arc {
+      animation-name: spin;
+      animation-timing-function: ease-in-out;
+      animation-iteration-count: infinite;
+      transform-origin: center;
+    }
+
+    .loader>svg .arc-1 {
+      animation-duration: 2s;
+    }
+
+    .loader>svg .arc-2 {
+      animation-duration: 1s;
+    }
+
+    .loader>svg .arc-3 {
+      animation-duration: 3s;
+    }
+
+    @keyframes spin {
+      from {
+        transform: rotate(0deg);
+      }
+
+      to {
+        transform: rotate(360deg);
+      }
+    }
   </style>
 </head>
 
@@ -31,28 +65,49 @@
   <div class="loader">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
       viewBox="0 0 100 100" xml:space="preserve">
-      <path d="M31.6,3.5C5.9,13.6-6.6,42.7,3.5,68.4c10.1,25.7,39.2,38.3,64.9,28.1l-3.1-7.9c-21.3,8.4-45.4-2-53.8-23.3
+      <path class="arc arc-1" d="M31.6,3.5C5.9,13.6-6.6,42.7,3.5,68.4c10.1,25.7,39.2,38.3,64.9,28.1l-3.1-7.9c-21.3,8.4-45.4-2-53.8-23.3
        c-8.4-21.3,2-45.4,23.3-53.8L31.6,3.5z">
-        <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="2s" from="0 50 50"
-          to="360 50 50" repeatCount="indefinite"></animateTransform>
       </path>
-      <path d="M42.3,39.6c5.7-4.3,13.9-3.1,18.1,2.7c4.3,5.7,3.1,13.9-2.7,18.1l4.1,5.5c8.8-6.5,10.6-19,4.1-27.7
+      <path class="arc arc-2" d="M42.3,39.6c5.7-4.3,13.9-3.1,18.1,2.7c4.3,5.7,3.1,13.9-2.7,18.1l4.1,5.5c8.8-6.5,10.6-19,4.1-27.7
        c-6.5-8.8-19-10.6-27.7-4.1L42.3,39.6z">
-        <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="1s" from="0 50 50"
-          to="-360 50 50" repeatCount="indefinite"></animateTransform>
       </path>
-      <path d="M82,35.7C74.1,18,53.4,10.1,35.7,18S10.1,46.6,18,64.3l7.6-3.4c-6-13.5,0-29.3,13.5-35.3s29.3,0,35.3,13.5
+      <path class="arc arc-3" d="M82,35.7C74.1,18,53.4,10.1,35.7,18S10.1,46.6,18,64.3l7.6-3.4c-6-13.5,0-29.3,13.5-35.3s29.3,0,35.3,13.5
        L82,35.7z">
-        <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="2s" from="0 50 50"
-          to="360 50 50" repeatCount="indefinite"></animateTransform>
       </path>
     </svg>
   </div>
   <div class="hidden error-message"></div>
   <div class="hidden error-stack"></div>
-  <form class="hidden" action="#">
-    <input type="text" inputmode="url" class="dom-input" />
-  </form>
+  <script async defer>
+    async function run() {
+
+    }
+    async function init() {
+      const loader = document.querySelector('.loader')
+      if (loader != null) {
+        loader.parentElement?.removeChild(loader)
+      }
+      return run()
+    }
+
+    init().catch((err) => {
+      console.error(err)
+      const errorMessageDiv = document.querySelector('.error-message')
+      if (errorMessageDiv != null) {
+        errorMessageDiv.classList.remove('hidden')
+        errorMessageDiv.innerText = ((Boolean(err)) && (Boolean(err.message))) ? err.message : err
+      }
+      const errorStackDiv = document.querySelector('.error-stack')
+      if (errorStackDiv != null) {
+        errorStackDiv.classList.remove('hidden')
+        errorStackDiv.innerText = ((Boolean(err)) && (Boolean(err.stack))) ? err.stack : ''
+      }
+      const canvas = document.querySelector('canvas')
+      if (canvas != null) {
+        canvas.parentElement?.removeChild(canvas)
+      }
+    })
+  </script>
 </body>
 
 </html>
