Build using empty base path

--- a/src/index.html
+++ b/src/index.html
@@ -524,7 +524,7 @@
   </div>
   <div class="hidden error-message"></div>
   <div class="hidden error-stack"></div>
-  <script type="module">
+  <script>
     const PICK_TIMEOUT = 5000;
     const state = { mouseEntered: false, logger: false }
     /**
