One technologies word

--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,7 @@
         </video>
         <div class="grid__item-title">RTS / Стратегия</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -379,7 +379,7 @@
         </video>
         <div class="grid__item-title">Elven Scout / Орки</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -391,7 +391,7 @@
         </video>
         <div class="grid__item-title">Vertical Platformer / Платформер</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -403,7 +403,7 @@
         </video>
         <div class="grid__item-title">Rooms / Комнаты</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -415,7 +415,7 @@
         </video>
         <div class="grid__item-title">Sidescroller / Платформер</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -427,7 +427,7 @@
         </video>
         <div class="grid__item-title">Tower Defence / Башенки</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -439,7 +439,7 @@
         </video>
         <div class="grid__item-title">Pacman</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -451,7 +451,7 @@
         </video>
         <div class="grid__item-title">Galaxian</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -463,7 +463,7 @@
         </video>
         <div class="grid__item-title">ICO Sphere / Октаэдр</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">WebGL</span>
         </div>
       </a>
@@ -475,7 +475,7 @@
         </video>
         <div class="grid__item-title">Fighting / Драки</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -487,7 +487,7 @@
         </video>
         <div class="grid__item-title">Mario</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -499,7 +499,7 @@
         </video>
         <div class="grid__item-title">Shooting / Стрелялки</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -511,7 +511,7 @@
         </video>
         <div class="grid__item-title">Pokemon</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
@@ -523,7 +523,7 @@
         </video>
         <div class="grid__item-title">Farm / Ферма</div>
         <div class="grid__item-descr">
-          <span class="grid__item-descr-label">Technologies / Технологии:</span>
+          <span class="grid__item-descr-label">Technologies:</span>
           <span class="grid__item-descr-value">PixiJS</span>
         </div>
       </a>
