--- a/src/index.html
+++ b/src/index.html
@@ -352,7 +352,7 @@
   <section class="grid">
     <!-- start of grid -->
     <div class="grid__cell">
-      <a class="grid__item" href="https://volodalexey.github.io/simple-bevy-wasm-ball-game/">
+      <a class="grid__item" href="https://volodalexey.github.io/find-the-difference/">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 98.53 98.53"
           xml:space="preserve" class="sticker">
           <path style="fill:#ffffff;"
@@ -362,6 +362,18 @@
           <path
             d="M 84.686,28.811 69.688,28.844 69.722,13.846 56.746,21.362 49.266,8.369 41.785,21.362 28.81,13.845 28.843,28.844 13.846,28.81 21.362,41.785 8.368,49.266 21.361,56.747 13.844,69.721 28.843,69.688 28.809,84.686 41.784,77.17 49.265,90.162 56.745,77.17 69.72,84.687 69.686,69.688 84.685,69.722 77.168,56.747 90.161,49.266 77.17,41.784 Z m -44.88,31.572 -9.923,-7.51 3.647,9.837 -2.242,0.831 -5.199,-14.023 2.262,-0.838 9.93,7.584 -3.672,-9.904 2.222,-0.824 5.199,14.023 z m 7.465,-2.702 c -1.232,0.529 -3.095,0.879 -3.997,-1.554 l -3.207,-8.653 c -0.828,-2.231 0.471,-3.355 1.793,-3.803 0,0 5.417,-1.781 6.24,-1.965 l 0.674,1.815 -5.726,2.122 c -0.996,0.369 -0.79,0.926 -0.599,1.443 l 1.033,2.785 5.961,-1.985 0.673,1.815 -5.819,2.367 1.033,2.785 c 0.389,1.012 1.001,0.763 1.557,0.557 l 5.533,-2.052 0.666,1.796 c -0.655,0.351 -5.815,2.527 -5.815,2.527 z m 18.432,-6.899 -4.477,-5.461 0.418,6.966 -2.489,0.923 -9.788,-12.322 2.377,-0.882 7.476,9.538 -1.148,-11.884 2.413,-0.895 0.363,4.338 4.922,6.097 -1.1,-11.985 2.376,-0.881 1.147,15.525 z" />
         </svg>
+        <video loop muted playsinline poster="./image/find-the-difference.jpg">
+          <source src="./video/find-the-difference.mp4" type="video/mp4" />
+        </video>
+        <div class="grid__item-title">Find the difference / Найди отличия</div>
+        <div class="grid__item-descr">
+          <span class="grid__item-descr-label">Technologies:</span>
+          <span class="grid__item-descr-value">PixiJS</span>
+        </div>
+      </a>
+    </div>
+    <div class="grid__cell">
+      <a class="grid__item" href="https://volodalexey.github.io/simple-bevy-wasm-ball-game/">
         <video loop muted playsinline poster="./image/simple-bevy-wasm-ball-game.jpg">
           <source src="./video/simple-bevy-wasm-ball-game.mp4" type="video/mp4" />
         </video>
